--- a/index.html
+++ b/index.html
@@ -3,10 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>LaMetric - A Connected Clock</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/global.css">
 </head>
 <body>
-    <div>
-        <img src="images/logo.svg">
+    <header class="header-div">
+
+        <ul class="nav-list">
+            <p>
+                <li>
+                    <a href="Accueil.html"><img src="images/logo.svg"></a>
+                <li>
+                    <a href="">Time</a>
+                <li>
+                    <a href="">Sky</a>    
+                <li>
+                    <a href="">Market</a>
+                    
+            </p>    
+        </ul>
+
+    </header>
+
+    <div id="stickyHeader" class="sticky-header">
+        <ul class="nav-list">
+            <p>
+                <li>
+                    <a class="sticky-nav-text" href="">Time</a>
+                <li>
+                    <a class="sticky-nav-text" href="">Sky</a>    
+                <li>
+                    <a class="sticky-nav-text" href="">Market</a>
+            </p>    
+        </ul>
     </div>
+
+    <main>
+
+        <section id="sticky-header">
+            
+        </section>
+
+        <section id="video-section">
+            <div class="centered-div">
+                <video autoplay muted loop>
+                    <source src="videos/Lametric TIME. Overview..mp4" alt="video of the LaMetric Time" type="video/mp4" />
+                </video>
+            </div>
+        </section>
+
+        <br>
+
+        <section id="presentation">
+            <div class="centered-div">
+
+                <div><img src="images/1 Phone clock faces_0.png" alt="Phone with the clock app" height="180"></div>
+                <div><img src="images/LaMetric_clockface-min_0.jpg" alt="Clock linked with the Phone" height="90"></div>
+
+            </div>
+        </section>    
+
+        <br>
+        <div class="centered-div"></div>
+        <br>
+        <div class="centered-div"></div>
+        <br>
+        <div class="centered-div"></div>
+        <br>
+        <div class="centered-div"></div>
+        <br>
+        <div class="centered-div"></div>
+
+</main>
+
+
+
+
+
+
 </body>
 </html>
