--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <ul class="nav-list">
             <p>
                 <li>
-                    <a class="sticky-nav-text" href="">Time</a>
+                    <a class="sticky-nav-text" href="#video-anchor">Video</a>
                 <li>
-                    <a class="sticky-nav-text" href="">Sky</a>    
+                    <a class="sticky-nav-text" href="#presentation-anchor">Presentation</a>    
                 <li>
-                    <a class="sticky-nav-text" href="">Market</a>
+                    <a class="sticky-nav-text" href="#specs-anchor">Specs</a>
             </p>    
         </ul>
     </div>
@@ -45,6 +45,7 @@
         </section>
 
         <section id="video-section">
+            <p class="anchor" id="video-anchor">anchor</p>
             <div class="centered-div">
                 <video autoplay muted loop>
                     <source src="videos/Lametric TIME. Overview..mp4" alt="video of the LaMetric Time" type="video/mp4" />
@@ -55,16 +56,31 @@
         <br>
 
         <section id="presentation">
-            <div class="centered-div">
+            <p class="anchor" id="presentation-anchor">anchor</p>
+            <div class="centered-div flex-container">
 
-                <div><img src="images/1 Phone clock faces_0.png" alt="Phone with the clock app" height="180"></div>
-                <div><img src="images/LaMetric_clockface-min_0.jpg" alt="Clock linked with the Phone" height="90"></div>
+                <div class="flex-item-left">
+                    <img src="images/1 Phone clock faces_0.png" alt="Phone with the clock app" height="720">
+                </div>
+                <div class="flex-item-right">
+                    <p>LOLOLOLOLOLOLOLOLOLOL</p>
+                    <img src="images/LaMetric_clockface-min_0.jpg" alt="Clock linked with the Phone" height="240">
+                </div>
 
             </div>
         </section>    
 
         <br>
-        <div class="centered-div"></div>
+
+        <section id="specs">
+            <p class="anchor" id="specs-anchor">anchor</p>
+            <div class="centered-div flex-container">
+
+                <p>Specs motherfucker</p>
+
+            </div>
+        </section>  
+
         <br>
         <div class="centered-div"></div>
         <br>
