added copyright disclaimer

--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
             <div>
                 Follow us on social media!
             </div>
+            <div>
+                <p>
+                    DISCLAIMER: I do not own any of the images on this website, they are sole property of LaMetric<span>&copy</span> and are used under Fair Use Agreement for a school project
+                </p>
+            </div>
         </footer>
 
 </main>
