--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             </div>
             
         </div>
-
     </div>
 
     <main>
@@ -91,9 +90,9 @@
                     <img src="images/1_Phone_clock_faces_0.png" alt="Phone with the clock app" height="720">
                 </div>
 
-                <div class="flex-item-right flex-container vertical-flex" style="height:100%">
+                <div class="flex-item-right flex-container vertical-flex">
 
-                    <div class="align-items-center" style="height: 50%;">
+                    <div class="align-items-center">
                         <p>
                             de efopa jfze fjo zejfiojzeio jfiozej fiozej fjioze jfiojzeiojf zejfioj zejf iozejf 
                             iozejfio zeif ezijf oiez foez fioez fjfj eioz fzejf iozef ioze fioze ioze ezfoziejf 
