--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="icon" href="images/favicon.png">
 
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/global.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/headers.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/slideshow.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 
@@ -38,7 +38,7 @@
     </header>
 
     <div class="sticky-header">
-        <div class="flex-nav custom-width margin-auto" style="--width: 60%;">  
+        <div class="flex-nav custom-width margin-auto augment-width-mobile" style="--width: 60%;">  
 
             <div class="flex-container separator-div" style="--width: 25%;"></div>
 
@@ -102,10 +102,20 @@
                 <div class="flex-item-right">
                     <div class="flex-container vertical-flex flex-space-between custom-height margin-auto" style="--height: 100%;">
                         <div class="align-items-center margin-auto">
+                            <h2>Donne l'heure et s'adapte à votre humeur</h2>
                             <p>
-                                de efopa jfze fjo zejfiojzeio jfiozej fiozej fjioze jfiojzeiojf zejfioj zejf iozejf 
-                                iozejfio zeif ezijf oiez foez fioez fjfj eioz fzejf iozef ioze fioze ioze ezfoziejf 
-                                zfzef zeefzd z fzef ezdfdfzd zdf d fzdf zd fdzfd zd dfd zded fzdd ziof jzeioj feziof 
+                                Habillez votre intérieur avec la LaMetric TIME connectée au WiFi. Ses charmantes 
+                                faces fascineront toutes les personnes qui poseront leur regard dessus. Choisissez 
+                                parmi des milliers de faces, ou créez la votre!
+                                <br><br>
+                                LaMetric TIME possède également des fonctionnalités intelligentes telles que des faces 
+                                qui s'adaptent automatiquement aux journées de fête, une face calendrier pour ne plus 
+                                avoir à regarder sur son téléphone ou encore une face prévision météo pour connaître 
+                                le temps en un coup d'oeil!
+                                <br><br>
+                                LaMetric time peut également marcher comme un réveil ou un minuteur au besoin! Elle
+                                possède également la focntion révolutionnaire de vous afficher les conseils pratiques 
+                                d'HTML et CSS de PIGNOT Hervé! L'incontournable de tout les développeurs web!
                             </p>
                         </div>
                         <div>
@@ -211,10 +221,10 @@
                     <div class="marquee-block">
                         <div class="marquee-inner to-left">
                             <span class="marquee-span">
-                                <!-- Done by JS (scripts/script.js -> onload) -->
+                                <!-- Done by JS (scripts/script.js -> window.onload) -->
                             </span>
                             <span class="marquee-span">
-                                <!-- Done by JS (scripts/script.js -> onload) -->
+                                <!-- Done by JS (scripts/script.js -> window.onload) -->
                             </span>
                         </div>
                     </div>
@@ -242,18 +252,16 @@
 
         <br>
         <br>
-        <div class="centered-div"></div>
         <br>
         <br>
-
-        <div class="centered-div"></div>
-
         <br>
         <br>
         <br>
         <br>
 
         <footer>
+            <br>
+            <br>
             <div>
                 <h2>Follow us on social media!</h2>
                 
@@ -265,11 +273,23 @@
                 <a href="#"><i class="fa-brands fa-twitter fa-lg"> </i>  Twitter</a>
                 <a href="#"><i class="fa-brands fa-linkedin fa-lg"> </i>  LinkedIn</a>
             </div>
+            <br>
+            <div class="flex-container custom-width flex-space-evenly margin-auto" style="--width: 50%;">
+                <a class="useful-link" href="#">About us</a>
+                <a class="useful-link" href="#">Contact us</a>
+                <a class="useful-link" href="#">Terms of use</a>
+                <a class="useful-link" href="#">Privacy policy</a>
+                <a class="useful-link" href="#">Cookie policy</a>
+                <a class="useful-link" href="#">Cookie settings</a>
+            </div>
+            <br>
+            <br><br><br>
             <div>
-                <p class="disclaimer">
+                <p class="disclaimer margin-auto">
                     DISCLAIMER: I do not own any of the images on this website nor do I own Time<span>&copy;</span>, they are sole property of LaMetric<span>&copy;</span> and are used under Fair Use for a school project
                 </p>
             </div>
+            <br>
         </footer>
 
 </main>
